window: Pass tab switching keys to the terminal for tabless windows

This was removed as a side effect of
a319aeb66f36e728af1b4929ddd69574df838702

https://bugzilla.gnome.org/show_bug.cgi?id=730128